replaced list elements with article element

--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
 
       <section id="skills" class="skills">
         <h2 class="section__title">Skills</h2>
-        <ul class="section__list skills__list">
-          <li class="skill">
+        <div class="section__list skills__list">
+          <article class="skill">
             <div class="skill__icon">
               <i class="fa-brands fa-html5 fa-4x"></i>
             </div>
@@ -130,8 +130,8 @@
                 Semantic HTML elements, tables, lists, BEM methodology
               </p>
             </div>
-          </li>
-          <li class="skill">
+          </article>
+          <article class="skill">
             <div class="skill__icon">
               <i class="fa-brands fa-css3-alt fa-4x"></i>
             </div>
@@ -142,8 +142,8 @@
                 design
               </p>
             </div>
-          </li>
-          <li class="skill">
+          </article>
+          <article class="skill">
             <div class="skill__icon">
               <i class="fa-brands fa-js fa-4x"></i>
             </div>
@@ -154,8 +154,8 @@
                 DOM
               </p>
             </div>
-          </li>
-          <li class="skill">
+          </article>
+          <article class="skill">
             <div class="skill__icon">
               <i class="fa-brands fa-react fa-4x"></i>
             </div>
@@ -167,8 +167,8 @@
                 Vue.js - Basic theoretical knowledge
               </p>
             </div>
-          </li>
-          <li class="skill">
+          </article>
+          <article class="skill">
             <div class="skill__icon">
               <i class="fa-solid fa-globe fa-4x"></i>
             </div>
@@ -180,8 +180,8 @@
                 Czech, Vietnamese - native speaker
               </p>
             </div>
-          </li>
-          <li class="skill">
+          </article>
+          <article class="skill">
             <div class="skill__icon">
               <i class="fa-solid fa-ellipsis fa-4x"></i>
             </div>
@@ -192,15 +192,15 @@
                 software
               </p>
             </div>
-          </li>
-        </ul>
+          </article>
+        </div>
       </section>
 
       <!-- PROJECTS -->
       <section id="projects" class="projects">
         <h2 class="section__title">Projects</h2>
-        <ul class="section__list">
-          <li class="project">
+        <div class="section__list">
+          <article class="project">
             <div class="project__image">
               <img src="./assets/img/portfolio-web.png" alt="" />
             </div>
@@ -214,8 +214,8 @@
                 >.
               </p>
             </div>
-          </li>
-          <li class="project">
+          </article>
+          <article class="project">
             <div class="project__image">
               <img src="./assets/img/product-preview-card.png" alt="" />
             </div>
@@ -236,8 +236,8 @@
                 >.
               </p>
             </div>
-          </li>
-          <li class="project">
+          </article>
+          <article class="project">
             <div class="project__image">
               <img src="./assets/img/clipboard-landing-page.png" alt="" />
             </div>
@@ -257,37 +257,37 @@
                 >.
               </p>
             </div>
-          </li>
-        </ul>
+          </article>
+        </div>
       </section>
 
       <!-- Experience-->
 
       <section id="experience">
         <h2 class="section__title">Experience</h2>
-        <ul class="section__list">
-          <li class="experience">
+        <div class="section__list">
+          <article class="experience">
             <h3 class="experience__title">Goodwill Housing s.r.o.</h3>
             <div class="experience__text">
               <p>Business manager</p>
               <p>2017 - present</p>
             </div>
-          </li>
-          <li class="experience">
+          </article>
+          <article class="experience">
             <h3 class="experience__title">Fox Hunter s.r.o.</h3>
             <div class="experience__text">
               <p>Project specialist</p>
               <p>2015 - 2017</p>
             </div>
-          </li>
-          <li class="experience">
+          </article>
+          <article class="experience">
             <h3 class="experience__title">AC&C Public Relations s.r.o.</h3>
             <div class="experience__text">
               <p>Account executive</p>
               <p>2014 - 2015</p>
             </div>
-          </li>
-        </ul>
+          </article>
+        </div>
       </section>
 
       <!-- Contact -->
