changed paths to be relative from root

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="cover__content txt-animation">
           <h1 class="cover__title">Hi, I am Thuy</h1>
           <p class="cover__text">Junior front-end developer</p>
-          <a class="cover__btn" href="assets/cv/cv-thuy-mai.pdf" download>
+          <a class="cover__btn" href="/assets/cv/cv-thuy-mai.pdf" download>
             Full CV download</a
           >
         </div>
@@ -71,7 +71,7 @@
       <!--about-->
       <section id="about" class="about">
         <div class="about__img">
-          <img src="assets/img/me-photo.jpg" alt="" />
+          <img src="/assets/img/me-photo.jpg" alt="" />
         </div>
         <div class="about__info">
           <h2 class="section__title">About</h2>
@@ -104,10 +104,10 @@
               ><span class="sr-only">GitHub profile</span>
               <i class="fa-brands fa-github fa-2xl" title="Github profile"></i
             ></a>
-            <a download href="assets/cv/cv-thuy-mai.pdf">
+            <a download href="/assets/cv/cv-thuy-mai.pdf">
               <img
                 class="about__cv"
-                src="assets/img/cv-icon.png"
+                src="/assets/img/cv-icon.png"
                 alt="download CV"
               />
             </a>
@@ -202,7 +202,7 @@
         <div class="section__list">
           <article class="project">
             <div class="project__image">
-              <img src="./assets/img/portfolio-web.png" alt="" />
+              <img src="/assets/img/portfolio-web.png" alt="" />
             </div>
             <div class="project__container">
               <h3 class="project__title">Portfolio web</h3>
@@ -217,7 +217,7 @@
           </article>
           <article class="project">
             <div class="project__image">
-              <img src="./assets/img/product-preview-card.png" alt="" />
+              <img src="/assets/img/product-preview-card.png" alt="" />
             </div>
             <div class="project__container">
               <h3 class="project__title">Product preview card component</h3>
@@ -239,7 +239,7 @@
           </article>
           <article class="project">
             <div class="project__image">
-              <img src="./assets/img/clipboard-landing-page.png" alt="" />
+              <img src="/assets/img/clipboard-landing-page.png" alt="" />
             </div>
             <div class="project__container">
               <h3 class="project__title">Clipboard landing page</h3>
@@ -315,6 +315,6 @@
       <p>&copy; Thu Thuy Mai 2022</p>
     </footer>
     <!-- JAVASCRIPT -->
-    <script src="assets/js/index.js"></script>
+    <script src="/assets/js/index.js"></script>
   </body>
 </html>
