refactor: Updated and corrected HTML content

--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@
 
           <div class="about__social">
             <a href="https://www.linkedin.com/in/tthuymai/"
-              ><span class="sr-only">LinkedIn profile</span>
+              ><span class="sr-only">LinkedIn</span>
               <i
                 class="fa-brands fa-linkedin fa-2xl"
                 title="LinkedIn profile"
               ></i
             ></a>
             <a href="https://github.com/mtthuy22"
-              ><span class="sr-only">GitHub profile</span>
+              ><span class="sr-only">GitHub</span>
               <i class="fa-brands fa-github fa-2xl" title="Github profile"></i
             ></a>
             <a download href="/assets/cv/cv-thuy-mai.pdf">
@@ -148,7 +148,7 @@
               <i class="fa-brands fa-js fa-4x"></i>
             </div>
             <div class="skill__desc">
-              <h3 class="skill__title">Javascript</h3>
+              <h3 class="skill__title">JavaScript</h3>
               <p class="skill__text">
                 Basic knowledge of JavaScript, working with functions, arrays,
                 DOM
@@ -270,21 +270,21 @@
             <h3 class="experience__title">Goodwill Housing s.r.o.</h3>
             <div class="experience__text">
               <p>Business manager</p>
-              <p>2017 - present</p>
+              <p>2017-present</p>
             </div>
           </article>
           <article class="experience">
             <h3 class="experience__title">Fox Hunter s.r.o.</h3>
             <div class="experience__text">
               <p>Project specialist</p>
-              <p>2015 - 2017</p>
+              <p>2015-2017</p>
             </div>
           </article>
           <article class="experience">
-            <h3 class="experience__title">AC&C Public Relations s.r.o.</h3>
+            <h3 class="experience__title">AC&amp;C Public Relations s.r.o.</h3>
             <div class="experience__text">
               <p>Account executive</p>
-              <p>2014 - 2015</p>
+              <p>2014-2015</p>
             </div>
           </article>
         </div>
@@ -295,7 +295,7 @@
         <div class="contact__item">
           <p class="contact__heading">Thanks for scrolling!</p>
           <p class="contact__subheading">Thu Thuy Mai</p>
-          <p class="contact__subheading">Junior Web & FE developer</p>
+          <p class="contact__subheading">Junior Web &amp; FE developer</p>
         </div>
         <div class="contact__item">
           <h2 class="contact__heading">Contact me</h2>
