refactor: reduced paddings, renamed classes for consitency

--- a/index.html
+++ b/index.html
@@ -176,14 +176,14 @@
       <!-- PROJECTS -->
       <section id="projects" class="projects">
         <h2>Projects</h2>
-        <article class="project">
+        <article class="projects__project">
           <img
-            class="project__image"
+            class="projects__image"
             src="/assets/img/portfolio-web.png"
             alt=""
           />
 
-          <div class="project__info">
+          <div class="projects__info">
             <h3>Portfolio web</h3>
             <p>
               Personal web created with HTML, CSS and SCSS. You can check out
@@ -194,14 +194,14 @@
             </p>
           </div>
         </article>
-        <article class="project">
+        <article class="projects__project">
           <img
-            class="project__image"
+            class="projects__image"
             src="/assets/img/product-preview-card.png"
             alt=""
           />
 
-          <div class="project__info">
+          <div class="projects__info">
             <h3>Product preview card component</h3>
             <p>
               Responsive product preview component from the
@@ -218,14 +218,14 @@
             </p>
           </div>
         </article>
-        <article class="project">
+        <article class="projects__project">
           <img
-            class="project__image"
+            class="projects__image"
             src="/assets/img/clipboard-landing-page.png"
             alt=""
           />
 
-          <div class="project__info">
+          <div class="projects__info">
             <h3>Clipboard landing page</h3>
             <p>
               Responsive clipboard landing page from the
@@ -269,12 +269,12 @@
 
       <!-- Contact -->
       <section id="contact" class="contact">
-        <div class="contact__item">
+        <div class="contact__col">
           <p class="contact__heading">Thanks for scrolling!</p>
           <p class="contact__subheading">Thu Thuy Mai</p>
           <p class="contact__subheading">Junior Web &amp; FE developer</p>
         </div>
-        <div class="contact__item">
+        <div class="contact__col">
           <h2 class="contact__heading">Contact me</h2>
           <p>
             <a href="mailto:mai.thuthuy91@gmail.com" class="contact__link"
@@ -289,7 +289,7 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <p>&copy; Thu Thuy Mai 2022</p>
+      <p class="footer__text">&copy; Thu Thuy Mai 2022</p>
     </footer>
     <!-- JAVASCRIPT -->
     <script src="/assets/js/index.js"></script>
